--- a/app/views/pages/layout.jade
+++ b/app/views/pages/layout.jade
@@ -1,9 +1,10 @@
-doctype html
+doctype
 html
     head
-        title= title
+        meta(charset="utf-8")
+        title #{title}
         include ./includes/head
     body
         include ./includes/header
-        block content{
-        h1 #{title}
+        block content
+        include ./includes/footer
