--- a/app/views/includes/header.jade
+++ b/app/views/includes/header.jade
@@ -2,7 +2,7 @@
     .row
         .page-header
             h1.alert.alert-info= title
-            small.label.label-success 慕课网电影天堂 &nbsp;-&nbsp;www.imyy.org
+            small.label.label-success 慕课网电影天堂
 .navbar.navbar-default.navbar-fixed-bottom
     .container
         .navbar-header
