--- a/app/views/includes/header.jade
+++ b/app/views/includes/header.jade
@@ -3,7 +3,7 @@
         .page-header
             h1.alert.alert-info= title
             small.label.label-success 慕课网电影天堂
-.navbar.navbar-default.navbar-fixed-bottom
+.navbar.navbar-default.navbar-fixed-top
     .container
         .navbar-header
             a.navbar-brand(href="/") 重度科幻迷
