--- a/app/views/pages/index.jade
+++ b/app/views/pages/index.jade
@@ -3,6 +3,13 @@ extends ../layout
 block content
 	.container
 		.row
+			each cat in categories
+				.panel.panel-primary
+					.panel-heading
+						h3
+							a(href='/results?cat=#{cat._id}&p=0') #{cat.name}
+					.panel-body
+						if cat.movies && cat.movies.length > 0
 			each item in movies
 				.col-md-2
 					.thumbnail
